# medicine-tracker-backend

./: .gitignore  erDiagram.html  erDiagram.md  erdiagrams.puml  pyproject.toml  requirements.txt
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: medicines.py  users.py
